--- a/Pertemuan_5/semantic.css
+++ b/Pertemuan_5/semantic.css
@@ -2,4 +2,102 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    color: black;
+}
+header{
+    background-color: #679289;
+    justify-content: space-between;
+    display: flex;
+    padding: 20px;
+    padding-right: 40px;
+}
+body{
+    background-color: #071E22;
+    
+}
+nav{
+    display: inline-block;
+}
+
+ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    margin-left: 20px;
+}
+li{
+    width: 80px;
+    text-align:center;
+    padding: 10px 0 10px 0;
+}
+ul li:hover{
+    color: white;
+    background-color: #1D7874;
+}
+.kontak li:hover{
+    background-color: rgba(0, 0, 0, 0);
+}
+.hov:hover .kontak{
+    display: block;
+    position: absolute;
+    margin: auto;
+    /* background-color: black; */
+}
+.kontak{
+    display: none;
+}
+main div{
+    width: 60%;
+    display: inline-block;
+    margin-top: 100px;
+}
+form{
+    box-shadow: 10px 10px 30px -17px rgba(114, 114, 114, 0.662);
+    margin: auto;
+    border-radius: 10px;
+    /* display: inline-block; */
+    background-color: #6792893b;
+    width: 300px;
+    padding: 10px 5px 10px 5px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+form input{
+    border: 0;
+    border-radius: 100px;
+    padding: 5px 0 5px 20px;
+    background-color: #6792893b;
+    height: 40px;
+    width: 80%;
+    margin: 20px auto 20px auto;
+}
+input:last-of-type{
+    padding: 0;
+    background-color: #679289;
+    color: white;
+    font-weight: bold;
+    width: 30%;
+}
+aside{
+    display: inline-block;
+    width: 30%;
+    padding: 50px;
+    position: absolute;
+}
+section{
+}
+article{
+    background-color: #6792895e;
+    margin-top: 20px;
+    padding: 15px;
+}
+article:hover{
+    background-color: #071E22;
+    color: white;
+}
+article a{
+    font-size: 20px;
+    font-weight: bold;
 }
