--- a/Pertemuan_6/style.css
+++ b/Pertemuan_6/style.css
@@ -7,6 +7,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+::-webkit-scrollbar{
+    display: none;
+}
 body{
     width: 100vw;
     height: 100vh;
@@ -34,7 +37,6 @@ body{
     background-image: url("assets/drawers.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: red;
     width: 40%;
     border-radius: 15px 0 0 15px;
 }
@@ -42,9 +44,7 @@ body{
     margin-top: 40px;
     display: flex;
     flex-direction: row;
-    gap: 30px;
-}
-.detail{
+    justify-content: space-between;
 }
 .detail p{
     font-size: 12px;
@@ -56,15 +56,65 @@ body{
     width: 35px;
     height: 35px;
     background-color: hsl(210, 46%, 95%);
-    margin-left: 40%;
+}
+.conLeft{
+    display: flex;
+    gap: 20px;
+}
+.icon:hover{
+    background-color: hsl(214, 17%, 51%);
+}
+.icon:hover svg{
+    fill: white;
+}
+.icon:hover .share{
+    display: flex;
+}
+svg{
+    fill: #6E8098;
 }
 .contact img{
     border-radius: 100%;
 }
 .share{
+    /* display: none; */
+    position: relative;
+    background-color: #4c596a;
+    color: white;
+    font-weight: 300;
+    width: 250px;
     display: none;
+    padding: 15px 40px;
+    margin: auto;
+    left: -125px;
+    top: -90px;
+    justify-content: space-around;
+    border-radius: 10px;
 }
 /* MOBILE */
 @media only screen and (max-width: 768px) {
+    .left{
+        width: 100%;
+        height: 30vh;
+        border-radius: 15px 15px 0 0;
+    }
+    .card{
+        width: 90%;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .right{
+        width: 100%;
+        padding: 40px;
+    }
+    body{
+        padding: 0px;
+    }
+    .share{
+        /* position: absolute; */
+        left: -72vw;
+        width: 90vw;
+        top: -30px;
+    }
     
   }
