--- a/Pertemuan_6/praktikum.css
+++ b/Pertemuan_6/praktikum.css
@@ -12,48 +12,39 @@
 }
 .flex-item{
     background-color: tomato;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
+    width: 130px;
+    height: 130px;
+    line-height: 130px;
 }
 .container{
     display: flex;
     flex-flow: row wrap;
-    flex-wrap: wrap;
 }
 .container > *{
-    padding: 10px;
-    flex: 1 100%;
+    padding: 20px;
+    text-align: center;
 }
+
 header{
     background-color: brown;
+    flex: 1 100%;
+}
+main{
+    display: flex;
 }
 article{
-    flex: 3 0px;
-    width: 60%;
+    flex: 5 100%;
+    display: inline-block;
 }
 p{
     background-color: cadetblue;
 }
 aside{
+    display: inline-block;
     background-color: gold;
-    width: 20%;
+    flex: 1 30%;
 }
 footer{
+    flex: 1 100%;
     background-color: bisque;
-}
-
-@media all and(min-width:768px){
-    aside:first-of-type{
-        order: 1;
-    }
-    article{
-        order: 2;
-    }
-    aside:last-of-type{
-        order: 3;;
-    }
-    article{
-        flex: 3 0px;
-    }
 }
